# psyche

./: .envrc  .gitignore  .psyche_env  Cargo.toml  Dockerfile.gateway  README.md  break_dns.sh  flake.nix  funky.sh  garnix.yaml  justfile  nginx_local_http.conf  package-lock.json  psyche-base.nix  repro.patch  restore_dns.sh  secrets.nix  setup-dev-environment.sh  setup.sh  wtf.txt
.cargo/: config.toml
.config/: nextest.toml
.github/: lm_eval_results.json
architectures/centralized/testing/: Cargo.toml  README.md
architectures/centralized/testing/src/: client.rs  lib.rs  server.rs  test_utils.rs
architectures/centralized/testing/tests/: integration_tests.rs  netsim.rs  simulations.rs
architectures/decentralized/solana-client/: Cargo.toml
architectures/decentralized/solana-client/src/: app.rs  backend.rs  instructions.rs  main.rs  network_identity.rs  retry.rs
architectures/decentralized/solana-client/src/command/: can_join.rs  checkpoint.rs  close_run.rs  create_run.rs  join_authorization_create.rs  join_authorization_delegate.rs  join_authorization_delete.rs  join_authorization_read.rs  json_dump_run.rs  json_dump_user.rs  json_info.rs  json_info_dump.rs  mod.rs  set_future_epoch_rates.rs  set_paused.rs  tick.rs  treasurer_claim.rs  treasurer_claim_rewards.rs  treasurer_top_up_rewards.rs  update_client_version.rs  update_config.rs  update_version_tag.rs
architectures/inference-only/inference-node/: Cargo.toml  packages.nix
architectures/inference-only/inference-node/src/: lib.rs  main.rs
config/: hermes-4-8b.toml
docker/: README.md  centralized-client.nix  psyche_base.Dockerfile  psyche_client.Dockerfile  psyche_client_create_run.sh  sidecar_entrypoint.sh  solana-client.nix  solana-test-client.nix  solana-test-validator.nix  train_entrypoint.sh
nix/: apps.nix  checks.nix  common.nix  devShell.nix  docker.nix  formatter.nix  integration-tests.nix  justfile  keys.nix  lib.nix  n0des.nix  nixosModules.nix  nixpkgs.nix  nvshmem.nix  packages.nix  pkgs.nix  (+3 more)
python/: Cargo.toml  build.rs  cutlass.nix  default.nix  flash-attn.nix  liger-kernel.nix  pyproject.toml  torchdata.nix  torchtitan.nix
python/extension-impl/: Cargo.toml
python/extension-impl/src/: extension.rs  lib.rs  vllm.rs
python/extension-impl/tests/: test_subprocess_reload.rs  test_vllm_integration.rs
python/inference/: engine.py
python/python/psyche/: __init__.py  _ext.py  dtensor_helpers.py
python/python/psyche/models/: __init__.py  causal_lm.py  factory.py  hf_transformers.py  tt.py  ttitan.py
python/python/psyche/sidecar/: __main__.py  api.py
python/python/psyche/vllm/: __init_.py  __init__.py  distributed_updater.py  engine.py  manager.py  protocol.py  run_inference_subprocess.py  rust_bridge.py  test_distributed.py  test_e2e_distributed.py  test_integration.py  test_load_weights.py  test_patched_integration.py  test_transforms.py  test_weight_updater.py  test_weight_updates.py  transforms.py  updater.py  vllm_patch.py  weight_updater.py
python/src/: extension.rs  lib.rs
shared/coordinator/: Cargo.toml
shared/coordinator/src/: bloom.rs  checkpointer.rs  checkpointer_selection.rs  committee.rs  committee_selection.rs  coordinator.rs  data_selection.rs  extended_metadata.rs  external_config.rs  fixed_string.rs  fixed_vec.rs  hash_wrapper.rs  lib.rs  model.rs  model_extra_data.rs  node_identity.rs  sha.rs  small_boolean.rs  swap_or_not.rs  tests.rs  types.rs
shared/core/: Cargo.toml
shared/core/src/: batch_id.rs  bloom.rs  bounded_queue.rs  cancellable_barrier.rs  commitment.rs  compressed_fixed_vec.rs  coordinator.rs  data_selection.rs  data_shuffle.rs  definitions.rs  deterministic_shuffle.rs  fixed_sequence.rs  fixed_string.rs  fixed_vec.rs  lcg.rs  lib.rs  merkle_tree.rs  model_extra_data.rs  node_identity.rs  running_average.rs  serde_utils.rs  similarity.rs  small_boolean.rs  testing.rs  token_size.rs
shared/inference/: Cargo.toml  vllm_engine.rs
shared/inference/examples/: vllm_with_updates.rs
shared/inference/src/: lib.rs  node.rs  protocol.rs  protocol_handler.rs  rust_bridge.py  vllm.rs  vllm_engine.rs
shared/inference/src/vllm/: engine.rs  mod.rs  types.rs  updater.rs
shared/inference/tests/: test_inference_node.rs  test_vllm_integration.rs
shared/modeling/: Cargo.toml  packages.nix
shared/modeling/docs/: FSDP_BATCH_PADDING.md
shared/modeling/examples/: inference.rs  train.rs
shared/modeling/src/: attention.rs  auto_config.rs  auto_parallelism.rs  auto_tokenizer.rs  causal_language_model.rs  device_utils.rs  distro.rs  dummy.rs  lib.rs  mps_compat.rs  parallelism.rs  python_causal_lm.rs  python_distributed_causal_lm.rs  python_distributed_trainer.rs  rope.rs  sampling.rs  trainer.rs  variable.rs
shared/modeling/src/models/: deepseek.rs  llama.rs
shared/tui/: Cargo.toml
shared/tui/examples/: logs.rs  metrics.rs  minimal.rs  tabs.rs
shared/tui/src/: iroh.rs  lib.rs  logging.rs
tools/rust-tools/run-manager/: Cargo.toml  README.md  build.rs  packages.nix
tools/rust-tools/run-manager/src/: coordinator_client.rs  lib.rs  main.rs  run_manager.rs
tools/rust-tools/run-manager/src/blockchain/: mod.rs
tools/rust-tools/run-manager/src/commands/: can_join.rs  mod.rs  wallet.rs
tools/rust-tools/run-manager/src/commands/authorization/: create.rs  delete.rs  mod.rs  read.rs  types.rs
tools/rust-tools/run-manager/src/commands/run/: checkpoint.rs  create_run.rs  download_results.rs  dump_config.rs  json_dump_run.rs  json_dump_user.rs  mod.rs  run_down_service.rs  set_future_epoch_rates.rs  set_paused.rs  update_config.rs  upload_data.rs
tools/rust-tools/run-manager/src/commands/treasury/: claim_rewards.rs
tools/rust-tools/run-manager/src/daemon/: client.rs  log_buffer.rs  mod.rs  protocol.rs  server.rs  state.rs
tools/rust-tools/run-manager/src/docker/: client.rs  coordinator_client.rs  manager.rs  mod.rs
tools/rust-tools/run-manager/tests/: integration_tests.rs
tools/rust-tools/run-manager/tests/common/: mod.rs
tools/rust-tools/train/: Cargo.toml
tools/rust-tools/train/src/: cli.rs  config.rs  data.rs  main.rs  train.rs
(+811 files in other folders)
