[workspace]
members = [
    "architectures/centralized/*",
    "architectures/decentralized/solana-client",
    "architectures/decentralized/testing",
    "architectures/decentralized/solana-tooling",
    "python/",
    "python/extension-impl/",
    "shared/*",
    "tools/rust-tools/*",
    "website/wasm",
]
resolver = "2"

[workspace.metadata.crane]
name = "psyche-workspace"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
psyche-coordinator = { path = "./shared/coordinator" }
psyche-core = { path = "./shared/core" }
psyche-client = { path = "./shared/client" }
psyche-data-provider = { path = "./shared/data-provider" }
psyche-eval = { path = "./shared/eval" }
psyche-network = { path = "./shared/network" }
psyche-modeling = { path = "./shared/modeling" }
psyche-python-extension = { path = "./python" }
psyche-python-extension-impl = { path = "./python/extension-impl" }
psyche-tui = { path = "./shared/tui" }
psyche-watcher = { path = "./shared/watcher" }
psyche-metrics = { path = "./shared/metrics" }

psyche-solana-client = { path = "./architectures/decentralized/solana-client" }
psyche-solana-authorizer = { path = "./architectures/decentralized/solana-authorizer/programs/solana-authorizer" }
psyche-solana-coordinator = { path = "./architectures/decentralized/solana-coordinator/programs/solana-coordinator" }
psyche-solana-treasurer = { path = "./architectures/decentralized/solana-treasurer/programs/solana-treasurer" }
psyche-solana-tooling = { path = "./architectures/decentralized/solana-tooling" }

hf-hub = { git = "https://github.com/IAvecilla/hf-hub.git", rev = "d10abc83f3c161671474e65c501667fc4585762d" }
tokio = { version = "1", features = [
    "io-util",
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "time",
    "signal",
] }
tokio-stream = "0.1"
tokio-util = "0.7.12"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.28"
tracing = { version = "0.1.40", features = ["std"] }
bytes = "1.7.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
postcard = { version = "1.0.10", features = ["use-std"] }
sha2 = "0.10.8"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = { version = "0.4.38", features = ["clock"] }
fast-math = "0.1"
async-trait = "0.1.82"
iroh = { version = "0.35.0", features = ["metrics"] }
iroh-relay = { version = "0.35.0", features = ["metrics"] }
iroh-blobs = { git = "https://github.com/NousResearch/iroh-blobs", rev = "2ebe362e90fa53f346ad466f1c9ef33ed2108524", features = [
    "rpc",
    "downloader",
    "metrics",
] }
flume = "0.11.1"
iroh-gossip = { version = "0.35.0" }
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
indicatif = "0.17.5"
tokenizers = { version = "0.20.0", default-features = false, features = [
    "onig",
] }
tch = { git = "https://github.com/jquesnelle/tch-rs.git", branch = "nccl-2.7.0" }
torch-sys = { git = "https://github.com/jquesnelle/tch-rs.git", branch = "nccl-2.7.0" }
pyo3-tch = { git = "https://github.com/jquesnelle/tch-rs.git", branch = "nccl-2.7.0" }
# tch = { path = "../tch-rs" }
# torch-sys = { path = "../tch-rs/torch-sys" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
serde_with = { version = "3.11.0", features = ["macros"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
thiserror = "2.0.3"
toml = "0.8.19"
clap-markdown = "0.1.4"
pyo3 = { version = "0.24", features = ["py-clone"] }
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5", features = [
    "async",
] }
anchor-lang-idl = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5", features = [
    "build",
] }

ts-rs = { git = "https://github.com/arilotter/ts-rs.git", rev = "92ce1752227fec9bb868ad8f25b26f110a795099", features = [
    "psyche-impl",
] }

# dev only
test-log = { version = "0.2.16", features = ["trace"] }
pretty_assertions = "1.4.1"
serial_test = "3.2.0"
rstest = "0.25.0"

[patch.crates-io]
iroh = { git = 'https://github.com/n0-computer/iroh.git', rev = "b08df6a04d011fa4681fb5cd44ceaa6e53e6b32f" }
iroh-relay = { git = 'https://github.com/n0-computer/iroh.git', rev = "b08df6a04d011fa4681fb5cd44ceaa6e53e6b32f" }
iroh-base = { git = 'https://github.com/n0-computer/iroh.git', rev = "b08df6a04d011fa4681fb5cd44ceaa6e53e6b32f" }

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
