[package]
name = "psyche-python-extension"
version.workspace = true
edition = "2021"
build = "build.rs"

[lib]
name = "psyche_python_extension"
crate-type = ["cdylib"]

[dependencies]
psyche-python-extension-impl = { workspace = true, optional = true }

[features]
python = ["psyche-python-extension-impl"]
python-extension = ["psyche-python-extension-impl/python-extension"]
parallelism = ["psyche-python-extension-impl/parallelism"]
