[package]
name = "psyche-python-extension"
version.workspace = true
edition = "2021"
build = "build.rs"

[lib]
name = "psyche_python_extension"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
test = false
bench = false


[dependencies]
tch.workspace = true
torch-sys.workspace = true
psyche-core.workspace = true
psyche-modeling = { workspace = true, features = ["python"] }
serde_json.workspace = true
tokio-util.workspace = true
pyo3.workspace = true
pyo3-tch.workspace = true
sysinfo = "0.30"
take_mut = "0.2.2"
tracing.workspace = true
pyo3-stub-gen = { git = "https://github.com/arilotter/pyo3-stub-gen", rev = "81a7aa99e4a686d5cedc90cf107ef84cfc48f20a" }

[features]
parallelism = ["psyche-modeling/parallelism"]
