[project]
name = "psyche-deps"
version = "0.1.0"
requires-python = "==3.12.*"
# deps like torch and flash attn are provided by nix
dependencies = ["transformers==4.56.1"]

[project.optional-dependencies]
tests = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
