[package]
name = "psyche-python-extension-impl"
version.workspace = true
edition = "2021"

[dependencies]
tch.workspace = true
torch-sys.workspace = true
psyche-core.workspace = true
psyche-modeling.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-tch = { workspace = true, optional = true }
sysinfo = "0.30"
take_mut = "0.2.2"

[features]
python = [
  "tch/python-extension",
  "torch-sys/python-extension",
  "pyo3",
  "pyo3-tch",
  "psyche-modeling/python",
]
python-extension = ["python", "pyo3/extension-module"]
parallelism = ["psyche-modeling/parallelism"]
