[package]
name = "psyche-coordinator"
edition = "2021"
version.workspace = true

[dependencies]
anchor-lang.workspace = true
anchor-lang-idl.workspace = true
bytemuck.workspace = true
fnv = "1.0.7"
bitvec = { git = "https://github.com/arilotter/bitvec", rev = "d33a2437f810ee4229457dfd1137d807914671f8" }

# client feature
serde = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
data-encoding = { version = "2.8.0", optional = true }

[dev-dependencies]
postcard.workspace = true


[features]
# non-required for on-chain. serialization, nice debug/display impls, etc.
client = [
  "bitvec/serde",
  "dep:serde",
  "dep:ts-rs",
  "dep:rand",
  "dep:data-encoding",
]
