[package]
name = "psyche-core"
version.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
anchor-lang.workspace = true
anchor-lang-idl.workspace = true
bytemuck.workspace = true
fast-math.workspace = true
rand = { workspace = true, optional = true }
serde.workspace = true
postcard.workspace = true
serde_arrays = "0.1.0"
serde_json.workspace = true
ts-rs.workspace = true
psyche-coordinator = { workspace = true, features = ["client"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2.workspace = true

[features]
rand = ["dep:rand"]

[dev-dependencies]
approx = "0.5.1"
