[package]
name = "psyche-inference"
version.workspace = true
edition = "2021"

[dependencies]
pyo3.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
# For integration tests
