[package]
name = "psyche-tui"
version.workspace = true
edition = "2021"

[dependencies]
tui-logger = { version = "0.12.0", features = ["tracing-support"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
ratatui = "0.28.1"
tracing.workspace = true
anyhow.workspace = true
tokio-util.workspace = true
tokio.workspace = true
futures.workspace = true
clap.workspace = true
logfire = { git = "https://github.com/NousResearch/logfire-rust", rev = "497574bff53f27db42ee4e581fea2658561c7833" }
tracing-opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
console-subscriber = "0.4.1"
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
async-trait.workspace = true
iroh-metrics.workspace = true
opentelemetry-appender-tracing.workspace = true


[dev-dependencies]
rand.workspace = true
