[package]
name = "psyche-centralized-testing"
edition = "2021"
version.workspace = true

[dependencies]
psyche-centralized-client = { path = "../client" }
psyche-centralized-server = { path = "../server" }
psyche-centralized-shared = { path = "../shared" }
psyche-client.workspace = true
psyche-coordinator.workspace = true
psyche-data-provider.workspace = true
psyche-network.workspace = true
psyche-core.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
rand.workspace = true
toml = "0.8.19"
serde.workspace = true
tracing.workspace = true
iroh-n0des = { git = "https://github.com/n0-computer/iroh-n0des", branch = "matheus23/v0.35-metrics", default-features = false, features = [
  "iroh_v035",
] }
iroh.workspace = true
iroh-blobs.workspace = true
iroh-gossip.workspace = true


[dev-dependencies]
test-log.workspace = true
