[package]
name = "psyche-inference-node"
version.workspace = true
edition = "2021"

[[bin]]
name = "psyche-inference-node"
path = "src/main.rs"

[[bin]]
name = "test-network"
path = "src/bin/test-network.rs"

[dependencies]
psyche-inference.workspace = true
psyche-network.workspace = true
psyche-core.workspace = true
psyche-metrics.workspace = true

tokio.workspace = true
tokio-util.workspace = true

anyhow.workspace = true

tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap.workspace = true
clap-markdown.workspace = true

iroh.workspace = true
iroh-blobs.workspace = true
iroh-gossip.workspace = true

serde_json.workspace = true
